<resources>
    <string name="app_name">SchedStuff</string>
    <string name="refresh_events">Refresh Events</string>
    <string name="fetch_event">Fetch Event</string>
    <string name="create_event">Create Event</string>
    <string name="event_id_entry">Enter Event ID</string>
    <string name="title_activity_create_event">CreateEventActivity</string>

    <string name="event_name">Name</string>
    <string name="event_length">Length</string>
    <string name="event_deadline">Deadline</string>
    <string name="event_start_before">Start before</string>
    <string name="event_begin_after">Begin after</string>
    <string name="event_decide_before">Decide before</string>

</resources>
